--- a/festivalwishes.html
+++ b/festivalwishes.html
@@ -3,7 +3,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"/>
-<title>Happy fes_name to Your Friends</title>
+<title> fes_name to Your Friends</title>
     <script type="text/javascript" src="https://wybiral.github.io/code-art/projects/tiny-mirror/index.js"></script>
     <link rel="stylesheet" type="text/css" href="https://wybiral.github.io/code-art/projects/tiny-mirror/index.css"> 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
@@ -522,7 +522,7 @@ img {vertical-align: middle;}
     background-size: cover;">
 	
 	
-<center><span style="font-size: 20px;"color: #ff077a;">▅ ▆ ▇ █ HAPPY fes_name █ ▇ ▆ ▅</center>	
+<center><span style="font-size: 20px;"color: #ff077a;">▅ ▆ ▇ █  fes_name █ ▇ ▆ ▅</center>	
 <center>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Wishing 2 -->
@@ -545,17 +545,17 @@ img {vertical-align: middle;}
 <div dir="ltr" style="text-align: left;" trbidi="on">
 <div style="background-color:rgb(255, 140, 0); border-radius: 17px; border: 0px solid rgb(0, 0, 0); box-shadow: rgba(0, 0, 0, 0.2) 5px 5px 5px; color: whitesmoke; font-family: arial, sans-serif; font-size: 18px; font-stretch: normal; font-style: normal; font-variant: normal; line-height: normal; margin: 0px auto; padding: 4px 5px 3px; width: 70%;">
 <marquee behavior="alternate"><b>
-“fes_name का ये शुभ अवसर आपके जीवन में अनेकों ख़ुशियाँ लेकर आए”
+🗿🗿🗿🗿🗿🗿🗿
 </b></marquee>
 </div>
 <div style="background-color: rgb(255, 255, 255); border-radius: 17px; border: 0px solid rgb(0, 0, 0); box-shadow: rgba(0, 0, 0, 0.2) 5px 5px 5px; color: blue; font-family: arial, sans-serif; font-size: 18px; font-stretch: normal; font-style: normal; font-variant: normal; line-height: normal; margin: 0px auto; padding: 4px 5px 3px; width: 70%;">
 <marquee behavior="alternate"><b>
-इस fes_name हमारी शुभकामनाएँ आपके साथ हैं
+Telegram👇👇
 </b></marquee>
 </div>
 <div style="background-color: rgb(0, 255, 42); border-radius: 17px; border: 0px solid rgb(0, 0, 0); box-shadow: rgba(0, 0, 0, 0.2) 5px 5px 5px; color: black; font-family: arial, sans-serif; font-size: 18px; font-stretch: normal; font-style: normal; font-variant: normal; line-height: normal; margin: 0px auto; padding: 4px 5px 3px; width: 70%;">
 <marquee behavior="alternate"><b>
-|| fes_name की हार्दिक बधाई || 
+@ID_ABOL_HACKER
 </b></marquee>
 </div>
 </div>
@@ -608,23 +608,23 @@ img {vertical-align: middle;}
 
 </center>
 <br><br><center>
-    <p style="text-align: center;"><strong><span style="background-color: #ffea00; color: #005f96; font-size: 18pt; font-family: tahoma, arial, helvetica, sans-serif;">&nbsp;Wishing you a very </span></p>
+    <p style="text-align: center;"><strong><span style="background-color: #ffea00; color: #005f96; font-size: 18pt; font-family: tahoma, arial, helvetica, sans-serif;"> </span></p>
 </center>
 <br>
-<p style="text-align: center;"><strong><span style="font-size: 21pt; font-family: 'comic sans ms', sans-serif; color: #ff7700;">✪ <span style="font-family: 'trebuchet ms', geneva;">Happy fes_name</span> ✪</span></strong></p>
+<p style="text-align: center;"><strong><span style="font-size: 21pt; font-family: 'comic sans ms', sans-serif; color: #ff7700;"><span style="font-family: 'trebuchet ms', geneva;"></span> </span></strong></p>
 <br>
-<p style="text-align: center;"><strong><span style="background-color: #ff0000; color: #ffffff; font-size: 16pt; font-family: tahoma, arial, helvetica, sans-serif;">&nbsp;to you and your lovely family </span></p>
+<p style="text-align: center;"><strong><span style="background-color: #ff0000; color: #ffffff; font-size: 16pt; font-family: tahoma, arial, helvetica, sans-serif;"> </span></p>
   <br>
-  <p style="text-align: center;"><span style="background-color: #008000; color: #ffffff; font-size: 16pt; font-family: tahoma, arial, helvetica, sans-serif;">&nbsp;May this auspicious occasion of fes_name bring happiness, prosperity, health, and peace in your life.</span></p>
+  <p style="text-align: center;"><span style="background-color: #008000; color: #ffffff; font-size: 16pt; font-family: tahoma, arial, helvetica, sans-serif;">Author : ABOL_HACKER</span></p>
   <br>
-  <p style="text-align: center;"><span style="background-color: #ff00ff; color: #ffffff; font-size: 16pt; font-family: tahoma, arial, helvetica, sans-serif;">&nbsp;✪ I wish that this fes_name is your best one. ✪</span></p>
+  <p style="text-align: center;"><span style="background-color: #ff00ff; color: #ffffff; font-size: 16pt; font-family: tahoma, arial, helvetica, sans-serif;">  </span></p>
 <br>
 
-<p style="text-align: center;"><span style="background-color: #663399; color: #FFFAFA; font-size: 15pt; font-family: tahoma, arial, helvetica, sans-serif;">&nbsp; यह संदेश fes_name तक सभी के मोबाइल में होना चाहिए यह आपका फर्ज हैं </span></p>
+<p style="text-align: center;"><span style="background-color: #663399; color: #FFFAFA; font-size: 15pt; font-family: tahoma, arial, helvetica, sans-serif;"> </span></p>
 <br>
 <center>
 <div class="busi"><h4><p style="text-transform: uppercase;font-size: 26px;color:#ffffff;"> <script type="text/javascript" language="Javascript">                                       
- document.write( "by - " +a);
+ document.write( " " +a);
                       </script><br><br></p></h4></center>
 <center>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -668,7 +668,7 @@ var x = setInterval(function() {
   // If the count down is finished, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "🙏 Welcome 🙏";
+    document.getElementById("demo").innerHTML = "❤️Welcome ❤️";
   }
 }, 1000);
 </script>       
