--- a/festivalwishes.html
+++ b/festivalwishes.html
@@ -515,7 +515,7 @@ img {vertical-align: middle;}
  </script>
 <body>
 
-<body class="bg" id="rakhi" style="background: linear-gradient(to bottom right, #f6ff00, #e1e8e7, #00ffe9);
+<body class="bg" id="rakhi" style="background: linear-gradient(to bottom right, #3b4252 , #2e3440 , #81a1c1);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
